syntax = "proto3";

import "google/protobuf/timestamp.proto";

package meta;

option go_package = "photobox-meta/proto";

service MetaService {
    rpc UploadMeta (UplodaMetaRequest) returns (MetaResponse);
    rpc GetMetaById (GetMetaByIdRequest) returns (MetaResponse);
    rpc GetMetaByUser (GetMetaByUserRequest) returns (GetMetaByUserResponse);
    rpc GetAllMeta (GetAllMetaRequest) returns (GetAllMetaResponse);
    rpc DeleteMetaById (DeleteMetaByIdRequest) returns (MetaResponse);
    rpc DeleteMetaByUser (DeleteMetaByUserRequest) returns (DeleteMetaByUserResponse);
    rpc UpdateMeta (UpdateMetaRequest) returns (MetaResponse);
}

message MetaResponse {
    string id = 1;
    string user_id = 2;
    string file_location = 3;
    string file_name = 4;
    string file_size = 5;
    string file_type = 6;
    // TODO: add keywords
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message UplodaMetaRequest {
    string user_id = 1;
    string file_location = 2;
    string file_name = 3;
    string file_size = 4;
    string file_type = 5;
    google.protobuf.Timestamp file_created_at = 6;
}

message GetMetaByIdRequest {}

message GetMetaByUserRequest {
    string user_id = 1;
}

message GetMetaByUserResponse {
    repeated MetaResponse metas = 1;
}

message GetAllMetaRequest {}

message GetAllMetaResponse {
    repeated MetaResponse metas = 1;
}

message DeleteMetaByIdRequest {
    string id = 1;
}

message DeleteMetaByUserRequest {
    string user_id = 1;
}

message DeleteMetaByUserResponse {
    repeated MetaResponse deleted_metas = 1;
}

message UpdateMetaRequest {
    string user_id = 1;
    string file_name = 2;
}